tests/baselines/reference/VariableDeclaration5_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration5_es6.ts(1,1): error TS1154: 'const' declarations are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration5_es6.ts (1 errors) ====
    const a: number = 1
    ~~~~~
!!! error TS1154: 'const' declarations are only available when targeting ECMAScript 6 and higher.